--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+	<title>FriendFinder!</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+	    crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery.js"></script>
 </head>
+
 <body>
 	<div class="container">
 		<div class="jumbotron">
 			<h1 class="display-3">Friend Finder</h1>
 			<hr class="my-4">
-			<p><h3>Answer a few basic questions.</h3></p>
-			<p><h3>Then find the friend with the greatest compatibility!</h3></p>
+			<p>
+				<h3>Answer a few basic questions.</h3>
+			</p>
+			<p>
+				<h3>Then find the friend with the greatest compatibility!</h3>
+			</p>
 			<p class="lead">
-				<button type="button" class="btn btn-primary btn-lg" id="surveyBtn">
-					<span class="glyphicon glyphicon-list-alt"></span>
-					Go To Survey
-				</button>
+				<a href="/survey">
+					<button type="button" class="btn btn-primary btn-lg" id="surveyBtn">
+						<span class="glyphicon glyphicon-list-alt"></span>
+						Go To Survey
+					</button>
+				</a>
 			</p>
 		</div>
 	</div>
@@ -24,6 +34,11 @@
 			text-align: center;
 		}
 	</style>
+	<script>
+		$('#surveyBtn').on('click', function () {
+
+		})
+	</script>
 </body>
 
 </html>
