added links at bottom. Need to get Modal and Survey match to work

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -256,6 +256,20 @@
         </div>
     </div>
     <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+
+                    <footer>
+                        <span>
+                            <a href="/api/friends">API Friends List</a> |
+                        <a href="https://github.com/Peter-Quoc/FriendFinder">GitHub Repo</a>
+                        </span>
+                    </footer>
+
+                </div>
+            </div>
+        </div>
         Copyright 2018
     </footer>
     <script>
